--- a/products.html
+++ b/products.html
@@ -32,6 +32,16 @@
         <div class="navbar-item is-active">
           <a href="products.html">Todos los productos</a>
         </div>
+        <div class="navbar-item is-active">
+          <div class="control">
+            <div class="select ">
+              <div class="select is-rounded">
+              <select id="categorias">
+                <option>Categoria</option>
+              </select>
+            </div>
+          </div>
+        </div>
         <div class="navbar-item">
           <form id="buscar">
             <div class="field has-addons">
