--- a/category.html
+++ b/category.html
@@ -8,6 +8,7 @@
   <title>Document</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="stylesheet" href="./assets/style/app.css">
 </head>
 
 <body>
@@ -29,14 +30,14 @@
         <div class="navbar-item">
           <a href="index.html">Home</a>
         </div>
-        <div class="navbar-item is-active">
+        <div class="navbar-item">
           <a href="products.html">Todos los productos</a>
         </div>
         <div class="navbar-item is-active">
           <div class="control">
             <div class="select is-rounded">
               <select id="categorias">
-                <option>Categoria</option>
+                <option disabled selected>Categoria</option>
               </select>
             </div>
           </div>
@@ -56,7 +57,7 @@
           </form>
         </div>
         <div class="navbar-item">
-          <button class="button mx-2">
+          <button class="button">
             <i class="fas fa-shopping-cart"></i>
           </button>
         </div>
@@ -64,7 +65,7 @@
     </div>
   </nav>
   <div class="columns is-mobile is-multiline">
-    <div class="column py-5 is-12">
+    <div class="column py-5 px-5 is-12">
       <h3 class="title is-4" id="categoryTitle"></h3>
     </div>
     <div class="column py-5 is-12">
