--- a/products.html
+++ b/products.html
@@ -8,6 +8,7 @@
   <title>Document</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="stylesheet" href="./assets/style/app.css">
 </head>
 
 <body>
@@ -32,12 +33,11 @@
         <div class="navbar-item is-active">
           <a href="products.html">Todos los productos</a>
         </div>
-        <div class="navbar-item is-active">
+        <div class="navbar-item">
           <div class="control">
-            <div class="select ">
-              <div class="select is-rounded">
+            <div class="select is-rounded">
               <select id="categorias">
-                <option>Categoria</option>
+                <option disabled selected>Categoria</option>
               </select>
             </div>
           </div>
@@ -57,7 +57,7 @@
           </form>
         </div>
         <div class="navbar-item">
-          <button class="button mx-2">
+          <button class="button">
             <i class="fas fa-shopping-cart"></i>
           </button>
         </div>
