--- a/category.html
+++ b/category.html
@@ -84,9 +84,9 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  <script src="./cards.js"></script>
+  <script src="./assets/js/cards.js"></script>
 
-  <script src="./category.js"></script>
+  <script src="./assets/js/category.js"></script>
 
 </body>
 
