--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
   </div>
   
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  <script src="./cards.js"></script>
+  <script src="./assets/js/cards.js"></script>
 
-  <script src="./index.js"></script>
+  <script src="./assets/js/index.js"></script>
 
 </body>
 
