--- a/products.html
+++ b/products.html
@@ -82,9 +82,9 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  <script src="./cards.js"></script>
+  <script src="./assets/js/cards.js"></script>
 
-  <script src="./products.js"></script>
+  <script src="./assets/js/products.js"></script>
 
 </body>
 
