--- a/products.html
+++ b/products.html
@@ -57,7 +57,7 @@
           </form>
         </div>
         <div class="navbar-item">
-          <button class="button">
+          <button class="button" id="btn-cart">
             <i class="fas fa-shopping-cart"></i>
           </button>
         </div>
